Update MetricsService.java